--- a/src/main/docker/tomcat/Dockerfile
+++ b/src/main/docker/tomcat/Dockerfile
@@ -1,3 +1,3 @@
 FROM tomcat:9.0.58
-COPY CouchDBLogger_Web.war /var/lib/tomcat9/webapps/ROOT.war
+COPY ../../../../target/CouchDBLogger-1.0-SNAPSHOT.war /var/lib/tomcat9/webapps/ROOT.war
 RUN ["rm","-rf","/var/lib/tomcat9/webapps/ROOT"]
