--- a/couchdb_logger/pom.xml
+++ b/couchdb_logger/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0.0</version>
     </parent>
     <groupId>org.harper</groupId>
-    <artifactId>CouchDBLogger</artifactId>
+    <artifactId>couchdb_logger</artifactId>
     <packaging>war</packaging>
     <version>1.0.0</version>
     <build>
