--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,15 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-
+    <repositories>
+        <repository>
+            <id>mulesoft</id>
+            <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
+        </repository>
+    </repositories>
     <modules>
         <module>couchdb_logger</module>
         <module>smart_contract</module>
+        <module>client_app</module>
     </modules>
 </project>
