--- a/smart_contract/build.gradle
+++ b/smart_contract/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     testImplementation 'org.assertj:assertj-core:3.11.1'
     testImplementation 'org.mockito:mockito-core:2.+'
+    testImplementation 'net.bytebuddy:byte-buddy:1.12.9'
 }
 
 test {
