--- a/smart_contract/build.gradle
+++ b/smart_contract/build.gradle
@@ -3,7 +3,7 @@
  */
 plugins {
     id 'com.github.johnrengelman.shadow' version '5.1.0'
-    id 'java.library.distribution'
+    id 'java-library-distribution'
 }
 
 
