--- a/client_app/build.gradle
+++ b/client_app/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'org.hyperledger.fabric:fabric-gateway-java:2.2.3'
     implementation 'org.json:json:20211205'
     implementation 'org.hyperledger.fabric-chaincode-java:fabric-chaincode-shim:2.4.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
 
 group = 'org.harper.fabric'
@@ -34,5 +35,7 @@ shadowJar {
     version = null
     classifier = null
 }
-
+test {
+    useJUnitPlatform()
+}
 targetCompatibility = JavaVersion.VERSION_11
