--- a/smart_contract/build.gradle
+++ b/smart_contract/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
     implementation group: 'org.hyperledger.fabric-chaincode-java', name: 'fabric-chaincode-shim', version: '2.+'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'commons-beanutils:commons-beanutils:1.9.4'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     testImplementation 'org.assertj:assertj-core:3.11.1'
     testImplementation 'org.mockito:mockito-core:2.+'
