--- a/couchdb_logger/src/main/compose/docker-compose.yaml
+++ b/couchdb_logger/src/main/compose/docker-compose.yaml
@@ -2,17 +2,13 @@ version: "3.5"
 services:
   db0:
     container_name: realcouchdb0
-    build:
-      context: .
-      dockerfile: Dockerfile_couchdb
+    image: couchdb:latest
     environment:
       - COUCHDB_USER=admin
       - COUCHDB_PASSWORD=adminpw
   db1:
     container_name: realcouchdb1
-    build:
-      context: .
-      dockerfile: Dockerfile_couchdb
+    image: couchdb:latest
     environment:
       - COUCHDB_USER=admin
       - COUCHDB_PASSWORD=adminpw
