--- a/couchdb_logger/src/main/compose/docker-compose.yaml
+++ b/couchdb_logger/src/main/compose/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       context: .
       dockerfile: Dockerfile_logger
     environment:
-      - COUCHDB_HOST=http://realcouchdb0:5984/
+      - COUCHDB_HOST=realcouchdb0:5984
     ports:
       - "8080:8080"
   logger1:
@@ -27,7 +27,7 @@ services:
       context: .
       dockerfile: Dockerfile_logger
     environment:
-      - COUCHDB_HOST=http://realcouchdb1:5984/
+      - COUCHDB_HOST=realcouchdb1:5984
     ports:
       - "8081:8080"
 networks:
