--- a/client_app/build.gradle
+++ b/client_app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     implementation 'org.slf4j:slf4j-api:1.7.36'
 // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
-    testImplementation 'ch.qos.logback:logback-classic:1.2.11'
+    implementation 'ch.qos.logback:logback-classic:1.2.11'
 
     implementation 'org.json:json:20211205'
     implementation 'io.grpc:grpc-netty-shaded:1.42.0'
