--- a/client_app/build.gradle
+++ b/client_app/build.gradle
@@ -16,17 +16,18 @@ repositories {
     maven {
         url = uri('https://repo.maven.apache.org/maven2/')
     }
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'org.hyperledger.fabric:fabric-gateway-java:2.2.3'
-    // https://mvnrepository.com/artifact/ch.qos.logback/logback-core
+    implementation project(':fabric-gateway-java')
     implementation 'ch.qos.logback:logback-core:1.2.11'
-// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     implementation 'org.slf4j:slf4j-api:1.7.36'
-// https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
     implementation 'ch.qos.logback:logback-classic:1.2.11'
+// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation 'org.apache.commons:commons-lang3:3.0'
 
+    implementation 'org.hyperledger.fabric-sdk-java:fabric-sdk-java:[2.2.0,2.3.0)'
     implementation 'org.json:json:20211205'
     implementation 'io.grpc:grpc-netty-shaded:1.42.0'
     implementation 'com.google.code.gson:gson:2.8.9'
