--- a/couchdb_logger/pom.xml
+++ b/couchdb_logger/pom.xml
@@ -5,11 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.harper</groupId>
     <artifactId>couchdb_logger</artifactId>
+    <properties>
+        <packaging.type>jar</packaging.type>
+    </properties>
     <packaging>${packaging.type}</packaging>
     <version>1.0.0</version>
     <profiles>
         <profile>
             <id>embed</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <properties>
                 <packaging.type>jar</packaging.type>
             </properties>
